# deep-beep

./: CMakeLists.txt  data.cpp  data.h  imgproc.cpp  main.cpp  main.qml  musicplayer.cpp  musicplayer.h  musicreader.cpp  musicreader.h  pipeline.cpp  pipeline.h
lib/fluidsynth/: CMakeLists.txt
lib/fluidsynth/src/: CMakeLists.txt
